# Smart-Retrieval

./: CONTRIBUTING.md  DEPLOYMENT.md  DOCKERFILE  Dockerfile  LICENSE  README.md
.github/workflows/: check-file-size.yml  node-js-tests.yml  pipeline.yml  push-to-external-deploy-repo.yml  push-to-external-repo.yml  python-tests.yml  sync-to-deployment-fork.yml  sync-to-hugging-face-hub.yml
backend/: .gitignore  README.md  example.env  pyproject.toml
backend/backend/: get_PSSCOC_docs.py  main.py  run.py
backend/backend/app/api/routers/: chat.py  collections.py  healthcheck.py  indexer.py  query.py  search.py
backend/backend/app/utils/: auth.py  contants.py  index.py  prompt_template.py
backend/backend/data/About PSSCOC/: About PSSCOC.json
backend/backend/data/PSSCOC/PSSCOC for Construction Works/: supplement-for-psscoc-for-construction-works-2020.docx
backend/backend/data/PSSCOC/PSSCOC for Design and Build/: supplement-for-psscoc-for-design-build-2020.docx
backend/backend/data/PSSCOC/Standard Conditions for Nominated Sub-Contract (NSC)/: 2_nsc_supplem.docx
frontend/: README.md  auth.ts  example.env  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/about/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/admin/collections/: route.ts
frontend/app/api/admin/collections-requests/: route.ts
frontend/app/api/admin/collections-requests/approve/: route.ts
frontend/app/api/admin/collections-requests/reject/: route.ts
frontend/app/api/admin/is-admin/: route.ts
frontend/app/api/admin/public-collections-requests/approve/: route.ts
frontend/app/api/admin/users/: route.ts
frontend/app/api/admin/users/demote/: route.ts
frontend/app/api/admin/users/promote/: route.ts
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/api/profile/: route.ts
frontend/app/api/public-collections/: route.ts
frontend/app/api/public-collections-requests/: route.ts
frontend/app/api/public/collections/: route.ts
frontend/app/api/status/: route.ts
frontend/app/api/user-collections/: route.ts
frontend/app/api/user-public-collections-requests/: route.ts
frontend/app/api/user/collections/: route.ts
frontend/app/api/user/collections-requests/: route.ts
frontend/app/chat/: page.tsx
frontend/app/components/: admin-section.tsx  chat-section.tsx  footer.tsx  header.tsx  login-buttons.tsx  profile-section.tsx  query-section.tsx  search-section.tsx
frontend/app/components/ui/: button.tsx  icons.tsx  input.tsx  login-buttons.tsx  main-container.tsx  mobilemenu.tsx  navlink.tsx
frontend/app/components/ui/admin/: admin-collections-requests.tsx  admin-manage-collections.tsx  admin-manage-requests.tsx  admin-manage-users.tsx  admin-menu.tsx  admin-new-collections-requests.tsx  admin.interface.ts  index.ts
frontend/app/components/ui/autofill-prompt/: autofill-prompt-dialog.tsx  autofill-prompt.interface.tsx  autofill-search-prompt-dialog.tsx  index.ts
frontend/app/components/ui/chat/: chat-actions.tsx  chat-avatar.tsx  chat-input.tsx  chat-message.tsx  chat-messages.tsx  chat-selection.tsx  chat.interface.ts  index.ts  use-copy-to-clipboard.tsx
frontend/app/components/ui/home/: client-component.tsx
frontend/app/components/ui/query/: index.ts  query-document-upload.tsx  query-manage.tsx  query-menu.tsx  query-selection.tsx  query.interface.ts
frontend/app/components/ui/search/: index.ts  search-input.tsx  search-results.tsx  search-selection.tsx  search-types.tsx  search.interface.ts  useSearch.tsx
frontend/app/privacy-policy/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/query/: page.tsx
frontend/app/search/: page.tsx
frontend/app/sign-in/: page.tsx
frontend/app/status/: page.tsx
frontend/app/terms-of-service/: page.tsx
frontend/app/unauthorized/: page.tsx
frontend/public/: robots.txt  sitemap.xml
frontend/types/: next-auth.d.ts
