[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["xKhronoz"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
llama-index = "^0.9.4"
pypdf = "^3.17.0"
python-dotenv = "^1.0.0"
llama-cpp-python = "^0.2.18"
transformers = "^4.35.2"
docx2txt = "^0.8"
doc2docx = "^0.2.4"
accelerate = "^0.26.1"
setuptools = "^69.0.3"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
# Dev Dependencies here
flake8 = "^7.0.0"
pytest = "^7.4.4"

# For CPU torch version: Windows and Linux
[tool.poetry.group.torch-cpu]
optional = true
[tool.poetry.group.torch-cpu.dependencies]
torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-2.1.1%2Bcpu-cp311-cp311-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { url = "https://download.pytorch.org/whl/cpu/torch-2.1.1%2Bcpu-cp311-cp311-linux_x86_64.whl", markers = "sys_platform == 'linux'" },
]

# For Cuda torch version: Windows and Linux
[tool.poetry.group.torch-cuda]
optional = true
[tool.poetry.group.torch-cuda.dependencies]
torch = [
    { url = "https://download.pytorch.org/whl/cu121/torch-2.1.1%2Bcu121-cp311-cp311-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { url = "https://download.pytorch.org/whl/cu121/torch-2.1.1%2Bcu121-cp311-cp311-linux_x86_64.whl", markers = "sys_platform == 'linux'" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
